# muchat

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  lib.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  nix.yml  notes.yml
chat/: Cargo.toml
chat/src/: client.rs  commands.rs  lib.rs  main.rs  utils.rs
chat/src/chat_client/: commands.rs  mod.rs  queue.rs  utils.rs
client/: Cargo.toml
client/src/: main.rs
client/src/simplex_client/: commands.rs  error.rs  mod.rs  response.rs  utils.rs
nix/: flake.nix  simplex-chat.nix
providers/: Cargo.toml
providers/src/chat/: client.rs  commands.rs  error.rs  mod.rs  queue.rs  response.rs  utils.rs
src/: home.rs  lib.rs  main.rs
src/ffi/: error.rs  external.rs  mod.rs
tauri-chat/: components.json  package.json  pnpm-lock.yaml
tauri-chat/src/: App.tsx  Chat.tsx  ChatContext.tsx  chat.module.css  index.css  main.tsx  useChatContext.ts  useWebSocket.ts
tauri-chat/src-tauri/: Cargo.toml
tauri-chat/src-tauri/src/: main.rs
tauri-chat/src/components/CommandPanel/: CommandPanel.tsx
tauri-chat/src/components/ContactList/: ContactList.module.css  ContactList.tsx  ContactListV2.tsx
tauri-chat/src/components/ContactList/Button/: Button.tsx
tauri-chat/src/components/ContactList/CommandPanel/: CommandPanel.tsx
tauri-chat/src/components/SideBar/: SideBar.tsx
tauri-chat/src/lib/: client.ts  command.ts  response.ts
ui/: .prettierignore  components.json  default.nix  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json
ui/src/: App.tsx  Chat.tsx  ChatContext.tsx  chat.module.css  config.ts  index.css  useSimplexCli.ts  useWebSocket.ts
ui/src-tauri/: Cargo.toml  default.nix  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: Avatar.tsx  Badge.tsx
ui/src/components/ActiveUserSelect/: ActiveUserSelect.tsx
ui/src/components/CommandConsole/: CommandConsole.tsx
ui/src/components/CommandPanel/: CommandPanel.tsx
ui/src/components/ContactList/: ContactList.module.css  ContactList.tsx  ContactListV2.tsx
ui/src/components/CreateUserDialog/: CreateUserDialog.tsx
ui/src/components/MessageInput/: MessageInput.module.css  MessageInput.tsx
ui/src/components/SideBar/: SideBar.tsx
ui/src/components/features/: AppSidebar.tsx  SearchBar.tsx
ui/src/components/features/chat/: Chat.tsx  GroupInvitationBubble.tsx  MessageBubble.tsx
ui/src/components/features/chat/Chat/: index.tsx
ui/src/components/features/chat/MessageInput/: MessageInput.module.css  index.tsx
ui/src/components/features/console/: CommandConsole.tsx  CommandPanel.tsx
ui/src/components/features/contacts/: AddContact.tsx  ContactCard.tsx  ContactList.tsx  ContactSuggestions.tsx  SearchBar.tsx
ui/src/components/features/user/: ActiveUserSelect.tsx  UserSettings.tsx
ui/src/components/forms/: CreateUser.tsx  index.tsx
ui/src/components/ui/: Button.tsx  Dialog.tsx  SideBar.tsx  Sidebar.tsx
ui/src/lib/: client.ts  command.ts  const.ts  error.ts  response.ts  simplex.ts  utils.ts
