[workspace]
members = ["providers"]

[package]
name = "muchat"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
iced = { version = "0.13.1", features = ["markdown", "highlighter", "debug"] }
muchat-providers = { path = "providers" }
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.19"
