[package]
name = "muchat-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24"
url = "2.5.3"
