[package]
name = "muchat-providers"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mugraph-payments/muchat"
authors = ["Cainã Costa <me@cfcosta.com>"]

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24"
