[package]
name = "muchat-providers"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mugraph-payments/muchat"
authors = ["Cainã Costa <me@cfcosta.com>"]

[dependencies]
async-stream = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
