[package]
name = "muchat-ui"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mugraph-payments/muchat"
authors = ["Cainã Costa <me@cfcosta.com>"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "^2.1", features = [] }
tauri-plugin-fs = "^2"
tauri-plugin-log = "^2.2"
tauri-plugin-shell = "^2"
tauri-plugin-websocket = "^2"
tokio = { workspace = true }
